# lakefs-image

./: .env.dist  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
configs/: .env.dist  .lakectl.yaml.dist
lakefs_utils/: functions.py
